old/apps/base/flux-capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts: 
    - change.me
  rules:
  - host: change.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capacitor
            port:
              number: 9000
